# MealManagementSystem

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  MealManagementDB.session.sql  MealManagementSystem  README.md  config.ini.example  schema.sql
.qt/: QtDeploySupport.cmake
include/: attendance.h  dailymenupage.h  database.h  expensetrackingpage.h  financialoverviewpage.h  loginwindow.h  mainwindow.h  mealattendancepage.h  menu.h  menuhistorypage.h  menumanagementpage.h  period.h  settings.h  user.h  usermanagementpage.h  userprofilepage.h
src/: attendance.cpp  attendance.h  dailymenupage.cpp  database.cpp  database.h  expense.cpp  expense.h  expensetrackingpage.cpp  finance.cpp  finance.h  financialoverviewpage.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp  mealattendancepage.cpp  menu.cpp  menu.h  menuhistorypage.cpp  menumanagementpage.cpp  period.cpp  settings.cpp  user.cpp  user.h  usermanagementpage.cpp  userprofilepage.cpp
